fix network buttons misaligned icons

--- a/app/styles/network/vis/navigation.scss
+++ b/app/styles/network/vis/navigation.scss
@@ -28,6 +28,7 @@ div.vis-network div.vis-navigation {
     text-align: center;
     line-height: $button-height;
     box-sizing: content-box;
+    padding: 0;
 
     // basic style for transparent button
     @extend .btn.link;
